--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0",
     "react-intersection-observer": "^9.15.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
